Reapply "Merge pull request #174 from banda-health/feature/go-2923"
This reverts commit f5a07c1c2ba899905bcfb94c36d0c7c8f370ea50.