@@ -51,8 +51,6 @@ import org.bandahealth.idempiere.graphql.dataloader.impl.MBHBPGeneralPayerInfoDa
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHBPPayerInfoDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHBPSpecificPayerInfoDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHClientConceptDataLoader;
-import org.bandahealth.idempiere.graphql.dataloader.impl.MBHCodedDiagnosisDataLoader;
-import org.bandahealth.idempiere.graphql.dataloader.impl.MBHCodedDiagnosisMappingDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHConceptDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHConceptDescriptionDataLoader;
 import org.bandahealth.idempiere.graphql.dataloader.impl.MBHConceptExtraDataLoader;
@@ -822,7 +820,6 @@ import org.bandahealth.idempiere.graphql.dataloader.impl.X_T_ReportStatementData
 import org.bandahealth.idempiere.graphql.dataloader.impl.X_T_TransactionDataLoader;
 import org.dataloader.DataLoaderRegistry;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 
@@ -841,7 +838,7 @@ public class BandaDataLoaderComposer {
 	 * in hot-swapping in development without having to restart iDempiere
 	 */
 	public BandaDataLoaderComposer() {
-		dataLoaders = Arrays.asList(
+		dataLoaders = List.of(
 				new M_ElementDataLoader(),
 				new M_RegistrationDataLoader(),
 				new MAccessLogDataLoader(),
@@ -903,8 +900,6 @@ public class BandaDataLoaderComposer {
 				new MBHBPPayerInfoDataLoader(),
 				new MBHBPSpecificPayerInfoDataLoader(),
 				new MBHClientConceptDataLoader(),
-				new MBHCodedDiagnosisDataLoader(),
-				new MBHCodedDiagnosisMappingDataLoader(),
 				new MBHConceptDataLoader(),
 				new MBHConceptDescriptionDataLoader(),
 				new MBHConceptExtraDataLoader(),
